--- a/index-test.html
+++ b/index-test.html
@@ -5,5 +5,5 @@
     <meta property='og:description' content='Description that will show in the preview'/>
     <meta property='og:url' content='//www.example.com/URL of the article'/>
   </head>
-  <body></body>
+  <body>Testing</body>
 </html>
