--- a/index-test.html
+++ b/index-test.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta property='og:title' content='Title of the article'/>
-    <meta property='og:image' content='//https://assets.euromoneydigital.com/dims4/default/66ac9bc/2147483647/strip/true/crop/960x1200+0+0/resize/800x1000!/quality/90/?url=http%3A%2F%2Feuromoney-brightspot.s3.amazonaws.com%2F2a%2F08%2F5ef879934d52a96856868bb6d8d9%2Fbeeple-elon-musk-dogecoin-960.jpg'/>
+    <meta property='og:image' content='//elon.webp'/>
     <meta property='og:description' content='Description that will show in the preview'/>
     <meta property='og:url' content='//www.example.com/URL of the article'/>
   </head>
