--- a/index-test.html
+++ b/index-test.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta property='og:title' content='Title of the article'/>
-    <meta property='og:image' content='//elon.webp'/>
+    <meta property='og:image' content='//1.JPG'/>
     <meta property='og:description' content='Description that will show in the preview'/>
     <meta property='og:url' content='//www.example.com/URL of the article'/>
   </head>
