--- a/ind.html
+++ b/ind.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <meta property='og:title' content='Title of the article'/>
-    <meta property='og:image' content='https://github.com/nicktaras/json_mocks/1.JPG'/>
-    <meta property='og:description' content='Description that will show in the preview'/>
-    <meta property='og:url' content='https://github.com/nicktaras/json_mocks/edit/main/index-test.html'/>
-    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Testing one two three four five"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://www.ubank.com.au:443/content/ubank/en/home-loans/property/home-loan-applications-and-expenses-preparation"/>
+    <meta property="og:description" content="Testing one two three"/>
+    <meta property="og:image" content="https://www.ubank.com.au:443/content/dam/ubank/img/page/home-loans/articles/home-loan-expenses-tile.jpg"/>
   </head>
   <body>Testing</body>
 </html>
