--- a/ind.html
+++ b/ind.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <meta property="og:title" content="Testing one two three four five"/>
+    <meta property="og:title" content="Testing one two three four five Testing one two three four five Testing one two three four five Testing one two three four five Testing one two three four five"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.ubank.com.au:443/content/ubank/en/home-loans/property/home-loan-applications-and-expenses-preparation"/>
-    <meta property="og:description" content="Testing one two three"/>
+    <meta property="og:description" content="Testing one two three Testing one two three four five Testing one two three four five Testing one two three four five Testing one two three four five Testing one two three four five"/>
     <meta property="og:image" content="https://www.ubank.com.au:443/content/dam/ubank/img/page/home-loans/articles/home-loan-expenses-tile.jpg"/>
   </head>
   <body>Testing</body>
